# fastapi-whistler-microservices

./: .env  .gitignore  Dockerfile  README.md  TODOS.md  app.py  contextmngr.py  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
alembic/: env.py
common/config/: __init__.py  helper.py  logger.py  settings.py
common/db/: mongo.py  session.py
common/dep/: db.py
common/models/: __init__.py  base.py  contentType.py  genericPictures.py  pictureMixIn.py  session.py
common/repository/: genericPicture.py
common/schemas/: base.py
common/schemes/: base.py  error.py  image.py
common/setup/: factory.py
common/templates/: confirm_email.html  magic_login.html  new_account.html  reset_password.html  test.html
common/utils/: email.py  logger.py  recursion.py
configs/: mongod.conf
discount_service/: main.py
discount_service/api/: __init__.py  discount.py
discount_service/db/: mongo.py
discount_service/models/: discount.py
discount_service/repository/: discount.py
discount_service/schemas/: __init__.py  discount.py
discount_service/setup/: lifespan.py
order_service/: main.py
order_service/api/: __init__.py  order.py
order_service/models/: __init__.py  order.py  orderItem.py  orderItems.py
order_service/repository/: order.py  orderItems.py
order_service/schemas/: __init__.py  order.py  orderItem.py
product_service/api/: __init__.py  product.py
product_service/models/: product.py
product_service/repository/: product.py
scripts/: run_migration.sh
test/: discount_service.py
user_service/: main.py
user_service/api/: auth.py  (+3 more)
(+34 files in other folders)
